updated mission 2 for mission 4

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,5 @@
-VITE_KEY=d780a27e3b2b4441bc4c940ac82a6223
+VITE_API=http://localhost:3000
+VITE_TEST=Testing env variables
+VITE_AZURE_KEY=d780a27e3b2b4441bc4c940ac82a6223
+VITE_AZURE_ENDPOINT=https://car-recogniser.cognitiveservices.azure.com/vision/v3.2/analyze?visualFeatures=Tags,Brands,Color
+# VITE_AZURE_ENDPOINT=https://car-recogniser.cognitiveservices.azure.com/computervision/imageanalysis:analyze?features=Tags&model-version=latest&language=en&api-version=2023-02-01-preview
