--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon src/index.ts",
-        "build": "tsc --project ."
+        "start": "node ./dist/src/index.js",
+        "build": "tsc"
     },
     "keywords": [],
     "author": "",
